Fri Dec  3 21:34:48 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * utils/logWalker/Invocation.cpp:

          Updated logWalker to handle the new logging time format from the
          ACE commit: Thu Dec  2 18:29:36 UTC 2010  Steve Huston
          This patch was submitted by Thomas Lockhart
          <Thomas dot Lockhart at jpl dot nasa dot gov>.

Fri Dec  3 19:33:25 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/array_anon_nested.idl:

          New file, containing an unusual IDL construct
          removed from array.idl below, so it can have
          the appropriate tao_idl options and avoid RTI
          DDS IDL processing.

        * tests/IDL_Test/IDL_Test.mpc:
        * tests/IDL_Test/array.idl:

          Changes corresponding to the above description.

Fri Dec  3 18:13:01 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/component_ami_rh_exs.cpp:
        * TAO_IDL/be/be_visitor_component/component_ami_rh_ex_base.cpp:
        * TAO_IDL/be/be_visitor_component/component_ami_rh_exh.cpp:
        * TAO_IDL/be_include/be_visitor_component/component_ami_rh_ex_base.h:

          Modified generation of AMI4CCM reply handler implementation
          class to include the port name in the constructed class
          name. This change eliminates redefinition errors when
          a component has more than one AMI receptacle that uses
          the same interface. The application developer can give
          each of these reply handlers a unique behavior if desired.

Fri Dec  3 16:10:08 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_visitor_root/root_cnh.cpp:
        * TAO_IDL/be/be_visitor_root/root_cns.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_ami_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_ami_exh.cpp:
        * TAO_IDL/be_include/be_codegen.h:
